@@ -3,6 +3,9 @@ Released on 2020-10-05?
 ======================================
 
 
+bpo-38792: Close a shell calltip if a :exc:`KeyboardInterrupt`
+or shell restart occurs.  Patch by Zackery Spytz.
+
 bpo-30780: Add remaining configdialog tests for buttons and
 highlights and keys tabs.
 
